CodeJB/log/err.txt
Info in <TUnixSystem::ACLiC>: creating shared library /home/smjoblan/iTHEPHY/iTHEPHY/CodeJB/./data_cc.so
Warning in cling::IncrementalParser::CheckABICompatibility():
  Possible C++ standard library mismatch, compiled with __GLIBCXX__ '20181206'
  Extraction of runtime standard library version was: '20191114'
In file included from input_line_12:9:
././data.cc:64:3: error: use of undeclared identifier 'gstyle'
  gstyle->SetOptStat(0);
  ^
Error in <ACLiC>: Dictionary generation failed!
